--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Font Source: Google Fonts - https://fonts.google.com/specimen/Baloo+Da+2 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,17 +14,18 @@
     <title>😸 Cat Facts Generator</title>
 </head>
 <body>
-    <div id="container">
-        <h1>😸 Cat Facts</h1>
-
-        <span id="catFact"></span>
-        <br><br>
-
-        <button id="btn">New Cat Fact</button>
-        <br><br>
-        Source: <a href="https://alexwohlbruck.github.io/cat-facts/">Cat API</a>
+    <div id="main-container" class="m-2">
+        <div id="container1" class="w-50 h-50 position-absolute top-50 start-50 translate-middle border border-5 border-info p-4">
+            <h1 class="text-center">😸 Cat Facts</h1>
+            <br>
+            <span id="catFact" class="text-center"></span>
+        </div>
     </div>
-
+    <div id="container2" class="text-center">
+        Source: <a href="https://alexwohlbruck.github.io/cat-facts/">Cat API</a>
+        <br><br>
+        <button id="btn">New Cat Fact</button>
+    </div>
     <script src="fetch.js"></script>
 </body>
 </html>
