--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div>
         <div class="ml-4 mr-4 text-green-200 text-sm hover:text-pink-400">Source: <a href="https://alexwohlbruck.github.io/cat-facts/" target="_blank">Cat API</a></div>
         <button id="btn" class="flex content-center ml-4 mr-4 mt-4 bg-transparent text-green-200 font-semibold hover:text-pink-400 py-2 px-4 border border-green-200 hover:border-pink-400 rounded">
-            Meow
+            Meoww
         </button>
     </div>
     <script src="fetch.js"></script>
