--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
             Meow
         </button>
     </div>
-    <script src="fetch.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
